vlib/v/checker/tests/module_multiple_names_err.out
vlib/v/checker/tests/module_multiple_names_err.vv:1:13: error: `module x` can only declare one module
    1 | module main os
      |             ~~
    2 | fn main() {
    3 |     println('hello, world')
